syntax = "proto3";

service GameService {
    rpc registerPhases (RegisterPhasesReq) returns (RegisterPhasesRes) {
    }

    rpc sendBackPlayer (SendBackPlayerReq) returns (SendBackPlayerRes) {
    }
}
message RegisterPhasesReq {
    message phaseRegInfo {
        string namespace = 1;
        string jsUrl = 2;
        string rpcUri = 3;
    }
    repeated phaseRegInfo phases = 1;
}
message RegisterPhasesRes {
    bool success = 1;
    string waitURL = 2;
}
message SendBackPlayerReq {
    string groupId = 1;
    string playUrl = 2;
    string playerToken = 3;
    string nextPhaseKey = 4;
}
message SendBackPlayerRes {
    string sendBackUrl = 1;
}

service PhaseService {
    rpc newPhase (NewPhaseReq) returns (NewPhaseRes) {
    }
}
message NewPhaseReq {
    string groupId = 1;
    string namespace = 2;
    string param = 3; //JSON string
    string owner = 4;
}
message NewPhaseRes {
    string playUrl = 1;
}